1999-11-05  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* general: Patched for portability to WinCE. The details are
	described in the file WinCE-PORT. Follow the instructions
	in README.WinCE to make the appropriate changes in config.h.
	- Tristan Savatier <tristan@mpegtv.com>

1999-10-30  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* create.c (pthread_create): Explicitly initialise thread state to
	default values.

	* cancel.c (pthread_setcancelstate): Check for NULL 'oldstate'
	for compatibility with Solaris pthreads;
	(pthread_setcanceltype): ditto:
	- Erik Hensema <erik.hensema@group2000.nl>

1999-10-23  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* pthread.h (ctime_r): Fix incorrect argument "_tm"
	- Erik Hensema <erik.hensema@group2000.nl>

1999-10-21  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* pthread.h (_POSIX_THREADS): Only define it if it isn't
	already defined. Projects may need to define this on
	the CC command line under Win32 as it doesn't have unistd.h
	- Aurelio Medina <aureliom@crt.com>

1999-10-17  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* rwlock.c (pthread_rwlock_destroy): Add cast to remove compile
	warning.

	* condvar.c (pthread_cond_broadcast): Only release semaphores
	if there are waiting threads.

1999-10-15  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* condvar.c (cond_wait_cleanup): New static cleanup handler for
	cond_timedwait;
	(cond_timedwait): pthread_cleanup_push args changed;
	canceling a thread while it's in pthread_cond_wait
	will now decrement the waiters count and cleanup if it's the
	last waiter.
	- Lorin Hochstein <lmh@xiphos.ca> and 
	  Peter Slacik <Peter.Slacik@tatramed.sk>;
	the last waiter will now reset the CV's wasBroadcast flag
	- Graham Dumpleton <Graham.Dumpleton@ra.pad.otc.telstra.com.au>.

Thu Sep 16 1999  Ross Johnson  <rpj@swan.canberra.edu.au>

	* rwlock.c (pthread_rwlock_destroy): Add serialisation.
	(_rwlock_check_need_init): Check for detroyed rwlock.